tests/e2e/pass/m15_itoa.ep
# EXIT: 0
# STDOUT: 42
fun main(): void {
    let s = itoa(42)
    putstr(s)
    putstr("\n")
    os.ExitProcess(0)
}
