tests/e2e/fail/closure_call_signature.ep
# COMPILE_ERROR: callable expects 1 argument(s), got 0
fun main(): void {
    let callback = fun(value: i64): i64 {
        value
    }
    print(itoa(callback()))
}
